tests/invalid/bug197.err_exp
bug197.m:023: Error: no clauses for predicate `foo'/4.
bug197.m:025: Error: clause for [38;5;87mpredicate `foo'/3[39;49m [38;5;203mwithout[39;49m a corresponding
bug197.m:025:   `:- pred' declaration.
bug197.m:025:   [38;5;226mHowever, a predicate of that name does exist with arity 4.[39;49m
bug197.m:026: In clause for predicate `foo'/3:
bug197.m:026:   in argument 1 of call to predicate `list.foldl'/4:
bug197.m:026:   type error: [38;5;87margument[39;49m has type
bug197.m:026:     [38;5;203mpred(string, T, V_6, V_6);[39;49m
bug197.m:026:   expected type was
bug197.m:026:     [38;5;40mpred(L, A, A).[39;49m
bug197.m:026:   [38;5;226mArity mismatch for the predicate: expected three arguments, got[39;49m
bug197.m:026:   [38;5;226mfour.[39;49m
bug197.m:032: Error: cannot use [38;5;203m!:SS[39;49m here due to the surrounding lambda
bug197.m:032:   expression; you may only refer to [38;5;40m!.SS.[39;49m
bug197.m:026:   Here is the surrounding context that makes state variable SS
bug197.m:026:   readonly.
bug197.m:032: In clause for predicate `foo'/3:
bug197.m:032:   warning: [38;5;87mvariable `STATE_VARIABLE_SS_20'[39;49m [38;5;203moccurs only once[39;49m in
bug197.m:032:   this scope.
For more information, recompile with `-E'.
